--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.2.0",
     "modernizr": "~2.8.1",
-    "knockout": "~3.2.0"
+    "knockout": "~3.2.0",
+    "parse" : "~1.3"
   }
 }
